--- a/components/AppCardLayout/AppCardLayout.scss
+++ b/components/AppCardLayout/AppCardLayout.scss
@@ -45,7 +45,8 @@
       align-items: flex-start;
       justify-content: space-between;
       margin-bottom: toRem(64);
-      padding-top: toRem(74);
+      padding-left: toRem(32);
+      padding-right: toRem(32);
     }
     @include media-breakpoint-only(md) {
       margin-bottom: toRem(40);
@@ -73,7 +74,8 @@
     max-width: toRem(280);
 
     @include media-breakpoint-up(lg) {
-      padding-top: toRem(28);
+      padding-top: toRem(24);
+      margin-right: toRem(40);
     }
     @include media-breakpoint-up(md) {
       max-width: toRem(332);
@@ -84,6 +86,8 @@
     .swiper-container {
       position: static;
       overflow: visible !important;
+      margin-left: toRem(-8);
+      margin-right: toRem(-8);
     }
 
     .swiper-wrapper {
@@ -98,9 +102,6 @@
   }
 
   &__items {
-    margin-left: toRem(-16);
-    margin-right: toRem(-16);
-
     @include media-breakpoint-up(lg) {
       display: flex;
       flex-wrap: wrap;
@@ -120,6 +121,13 @@
 
       &:nth-child(3) {
         margin-left: 33.3333%;
+      }
+    }
+    @include media-breakpoint-down(sm) {
+      height: auto;
+
+      .app-card-feature {
+        height: 100%;
       }
     }
   }
