--- a/components/AppTippy/AppTooltip.scss
+++ b/components/AppTippy/AppTooltip.scss
@@ -3,8 +3,13 @@
 
   position: relative;
   display: inline;
+  color: rgba($color-black, 0.4);
 
   @include defaultTransition(color);
+
+  @include hover {
+    color: $color-black;
+  }
 
   &--grey {
     color: rgba($color-white, 0.4);
